@@ -26,6 +26,7 @@ package com.oracle.svm.core.jdk;
 
 import java.util.Map;
 
+import com.oracle.svm.core.JavaMainWrapper.ArgsSupport;
 import com.oracle.svm.core.NeverInline;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.Alias;
@@ -36,8 +37,6 @@ import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
 import com.oracle.svm.core.snippets.KnownIntrinsics;
-
-import jdk.internal.misc.Unsafe;
 
 @TargetClass(className = "jdk.internal.misc.VM")
 public final class Target_jdk_internal_misc_VM {
@@ -56,6 +55,15 @@ public final class Target_jdk_internal_misc_VM {
         return StackTraceUtils.latestUserDefinedClassLoader(KnownIntrinsics.readCallerStackPointer());
     }
 
+    @Substitute
+    public static String[] getRuntimeArguments() {
+        /**
+         * This method is called by SourceLauncher to find arguments that the java launcher usually
+         * gives to the JVM rather than the application (--add-exports, --add-opens, etc).
+         */
+        return ArgsSupport.singleton().getInitialArgs();
+    }
+
     /*
      * Finalizers are not supported, but we still do not want to inherit any counters from the image
      * builder.
@@ -72,11 +80,14 @@ public final class Target_jdk_internal_misc_VM {
 }
 
 final class DirectMemoryAccessors {
-    /*
-     * Not volatile to avoid a memory barrier when reading the values. Instead, an explicit barrier
-     * is inserted when writing the values.
+    /**
+     * This field needs to be volatile to ensure that reads emit a LOAD-LOAD barrier. Without this
+     * barrier, subsequent reads could be reordered before the read of {@link #initialized},
+     * allowing threads to observe an uninitialized value for {@link #directMemory}. We could
+     * directly emit a LOAD-LOAD barrier instead, but it doesn't make any difference in terms of the
+     * used instructions on any of the relevant CPU architectures.
      */
-    private static boolean initialized;
+    private static volatile boolean initialized;
     private static long directMemory;
 
     static long getDirectMemory() {
@@ -102,27 +113,16 @@ final class DirectMemoryAccessors {
             newDirectMemory = Runtime.getRuntime().maxMemory();
         }
 
-        /*
-         * The initialization is not synchronized, so multiple threads can race. Usually this will
-         * lead to the same value, unless the runtime options are modified concurrently - which is
-         * possible but not a case we care about.
-         */
         directMemory = newDirectMemory;
-
-        /* Ensure values are published to other threads before marking fields as initialized. */
-        Unsafe.getUnsafe().storeFence();
+        /* STORE_STORE barrier is executed as part of the volatile write. */
         initialized = true;
-
         return newDirectMemory;
     }
 }
 
 final class PageAlignDirectMemoryAccessors {
-    /*
-     * Not volatile to avoid a memory barrier when reading the values. Instead, an explicit barrier
-     * is inserted when writing the values.
-     */
-    private static boolean initialized;
+    /** See {@link DirectMemoryAccessors#initialized} on why this needs to be volatile. */
+    @SuppressWarnings("javadoc") private static volatile boolean initialized;
     private static boolean pageAlignDirectMemory;
 
     static Boolean getPageAlignDirectMemory() {
@@ -134,9 +134,7 @@ final class PageAlignDirectMemoryAccessors {
 
     private static void initialize() {
         pageAlignDirectMemory = Boolean.getBoolean("sun.nio.PageAlignDirectMemory");
-
-        /* Ensure values are published to other threads before marking fields as initialized. */
-        Unsafe.getUnsafe().storeFence();
+        /* STORE_STORE barrier is executed as part of the volatile write. */
         initialized = true;
     }
 }
