@@ -36,7 +36,6 @@ import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReference;
-import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -81,9 +80,6 @@ import org.graalvm.nativeimage.ProcessProperties;
 
 import com.oracle.graal.pointsto.api.PointstoOptions;
 import com.oracle.graal.pointsto.reports.ReportUtils;
-import com.oracle.svm.common.option.CommonOptions;
-import com.oracle.svm.core.FallbackExecutor;
-import com.oracle.svm.core.FallbackExecutor.Options;
 import com.oracle.svm.core.JavaVersionUtil;
 import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.OS;
@@ -91,26 +87,30 @@ import com.oracle.svm.core.SharedConstants;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.VM;
-import com.oracle.svm.core.option.BundleMember;
-import com.oracle.svm.core.option.OptionOrigin;
-import com.oracle.svm.core.option.OptionUtils;
+import com.oracle.svm.core.imagelayer.LayeredImageOptions;
 import com.oracle.svm.core.util.ArchiveSupport;
 import com.oracle.svm.core.util.ClasspathUtils;
 import com.oracle.svm.core.util.ExitStatus;
-import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.driver.MacroOption.EnabledOption;
 import com.oracle.svm.driver.MacroOption.Registry;
 import com.oracle.svm.driver.launcher.ContainerSupport;
 import com.oracle.svm.driver.metainf.MetaInfFileType;
 import com.oracle.svm.driver.metainf.NativeImageMetaInfResourceProcessor;
 import com.oracle.svm.driver.metainf.NativeImageMetaInfWalker;
+import com.oracle.svm.hosted.CommonPoolUncaughtExceptionHandler;
 import com.oracle.svm.hosted.NativeImageGeneratorRunner;
+import com.oracle.svm.hosted.NativeImageOptions;
 import com.oracle.svm.hosted.NativeImageSystemClassLoader;
 import com.oracle.svm.hosted.util.JDKArgsUtils;
-import com.oracle.svm.util.LogUtils;
-import com.oracle.svm.util.ModuleSupport;
-import com.oracle.svm.util.ReflectionUtil;
-import com.oracle.svm.util.StringUtil;
+import com.oracle.svm.shared.option.BundleMember;
+import com.oracle.svm.shared.option.CommonOptionNames;
+import com.oracle.svm.shared.option.OptionOrigin;
+import com.oracle.svm.shared.option.OptionUtils;
+import com.oracle.svm.shared.util.LogUtils;
+import com.oracle.svm.shared.util.StringUtil;
+import com.oracle.svm.shared.util.VMError;
+import com.oracle.svm.util.GuestAccess;
+import com.oracle.svm.util.HostedModuleSupport;
 
 import jdk.graal.compiler.options.OptionKey;
 import jdk.internal.jimage.ImageReader;
@@ -120,12 +120,14 @@ public class NativeImage {
     private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
     private static final String DEFAULT_GENERATOR_MODULE_NAME = NativeImageGeneratorRunner.class.getModule().getName();
 
-    private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
-    private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
-
-    static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
+    private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getName();
+    private static final String CUSTOM_COMMON_FORK_JOIN_POOL_THREAD_FACTORY = NativeImageSystemClassLoader.NativeImageForkJoinWorkerThreadFactory.class.getName();
+    private static final String CUSTOM_COMMON_FORK_JOIN_POOL_EXCEPTION_HANDLER = CommonPoolUncaughtExceptionHandler.class.getName();
 
     static final String platform = getPlatform();
+
+    // to avoid pulling in hosted classes
+    public static final String COMPATIBILITY_MODE_FLAG_NAME = NativeImageOptions.CompatibilityMode.getName();
 
     private static String getPlatform() {
         return (OS.getCurrent().className + "-" + SubstrateUtil.getArchitectureName()).toLowerCase(Locale.ROOT);
@@ -186,7 +188,9 @@ public class NativeImage {
         return null;
     }
 
-    private static final String usageText = getResource("/Usage.txt");
+    private static final String HELP_TEXT = NativeImage.getResource("/Help.txt");
+    private static final String HELP_EXTRA_TEXT = NativeImage.getResource("/HelpExtra.txt");
+    private static final String USAGE_TEXT = getResource("/Usage.txt");
 
     static class ArgumentQueue {
 
@@ -236,10 +240,6 @@ public class NativeImage {
         }
 
         abstract boolean consume(ArgumentQueue args);
-
-        void addFallbackBuildArgs(@SuppressWarnings("unused") List<String> buildArgs) {
-            /* Override to forward fallback relevant args */
-        }
     }
 
     final CmdLineOptionHandler cmdLineOptionHandler;
@@ -248,11 +248,10 @@ public class NativeImage {
 
     public static final String oH = "-H:";
     static final String oHEnabled = oH + "+";
-    static final String oHDisabled = oH + "-";
     static final String oR = "-R:";
 
-    final String enablePrintFlags = CommonOptions.PrintFlags.getName();
-    final String enablePrintFlagsWithExtraHelp = CommonOptions.PrintFlagsWithExtraHelp.getName();
+    final String enablePrintFlags = CommonOptionNames.PrintFlags;
+    final String enablePrintFlagsWithExtraHelp = CommonOptionNames.PrintFlagsWithExtraHelp;
 
     private static <T> String oH(OptionKey<T> option) {
         return oH + option.getName() + "=";
@@ -271,14 +270,6 @@ public class NativeImage {
         return oHEnabled(option) + "@" + OptionOrigin.originDriver;
     }
 
-    private static String oHDisabled(OptionKey<Boolean> option) {
-        return oHDisabled + option.getName();
-    }
-
-    private static <T> String oR(OptionKey<T> option) {
-        return oR + option.getName() + "=";
-    }
-
     final String oHModule = oH(SubstrateOptions.Module);
     final String oHClass = oH(SubstrateOptions.Class);
     final String oHName = oH(SubstrateOptions.Name);
@@ -286,27 +277,23 @@ public class NativeImage {
     final String oHUseLibC = oH(SubstrateOptions.UseLibC);
     final String oHEnableStaticExecutable = oHEnabled(SubstrateOptions.StaticExecutable);
     final String oHEnableSharedLibraryFlagPrefix = oHEnabled + SubstrateOptions.SharedLibrary.getName();
-    final String oHEnableImageLayerFlagPrefix = oH + SubstrateOptions.LayerCreate.getName();
+    final String oHEnableImageLayerFlagPrefix = oH + LayeredImageOptions.LayerCreate.getName();
     final String oHColor = oH(SubstrateOptions.Color);
     final String oHEnableBuildOutputProgress = oHEnabledByDriver(SubstrateOptions.BuildOutputProgress);
     final String oHEnableBuildOutputLinks = oHEnabledByDriver(SubstrateOptions.BuildOutputLinks);
     final String oHCLibraryPath = oH(SubstrateOptions.CLibraryPath);
-    final String oHFallbackThreshold = oH(SubstrateOptions.FallbackThreshold);
-    final String oHFallbackExecutorJavaArg = oH(FallbackExecutor.Options.FallbackExecutorJavaArg);
-    final String oRRuntimeJavaArg = oR(Options.FallbackExecutorRuntimeJavaArg);
     final String oHTraceClassInitialization = oH(SubstrateOptions.TraceClassInitialization);
     final String oHTraceObjectInstantiation = oH(SubstrateOptions.TraceObjectInstantiation);
     final String oHTargetPlatform = oH(SubstrateOptions.TargetPlatform);
 
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
     final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
-    final String oHLayerCreate = oH(SubstrateOptions.LayerCreate);
+    final String oHLayerCreate = oH(LayeredImageOptions.LayerCreate);
 
     final Map<String, String> imageBuilderEnvironment = new HashMap<>();
     private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
     private final Set<String> imageBuilderUniqueLeftoverArgs = Collections.newSetFromMap(new IdentityHashMap<>());
     private final LinkedHashSet<Path> imageBuilderModulePath = new LinkedHashSet<>();
-    private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageProvidedJars = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
@@ -351,7 +338,8 @@ public class NativeImage {
                     boolean hasGCTimeRatio,
                     boolean hasExitOnOutOfMemoryError,
                     boolean hasMaximumHeapSizePercent,
-                    boolean hasUseParallelGC) {
+                    boolean hasUseParallelGC,
+                    boolean hasUseCompressedOops) {
 
         public List<String> defaultMemoryFlags() {
             List<String> flags = new ArrayList<>();
@@ -372,59 +360,44 @@ public class NativeImage {
                  */
                 flags.add("-XX:+ExitOnOutOfMemoryError");
             }
+            if (hasUseCompressedOops) {
+                /*
+                 * To print a warning if the max heap size is too large for compressed oops.
+                 */
+                flags.add("-XX:+UseCompressedOops");
+            }
             return flags;
         }
     }
 
     protected static class BuildConfiguration {
-        /*
-         * Reuse com.oracle.svm.util.ModuleSupport.isModulePathBuild() to ensure same interpretation
-         * of com.oracle.svm.util.ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM environment variable use.
-         */
-        private static final Method isModulePathBuild = ReflectionUtil.lookupMethod(ModuleSupport.class, "isModulePathBuild");
-        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
-        protected boolean modulePathBuild;
-        String imageBuilderModeEnforcer;
+        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
         protected final Path workDir;
         protected final Path rootDir;
         protected final Path libJvmciDir;
+
+        /**
+         * Command line arguments from {@link NativeImage#main(String[])}.
+         */
         protected final List<String> args;
 
         private HostFlags hostFlags;
         private Path driverTempDir;
-
-        BuildConfiguration(BuildConfiguration original) {
-            modulePathBuild = original.modulePathBuild;
-            imageBuilderModeEnforcer = original.imageBuilderModeEnforcer;
-            workDir = original.workDir;
-            rootDir = original.rootDir;
-            libJvmciDir = original.libJvmciDir;
-            args = original.args;
-            hostFlags = original.hostFlags;
-            driverTempDir = original.driverTempDir;
-        }
 
         protected BuildConfiguration(List<String> args) {
             this(null, null, args);
         }
 
         BuildConfiguration(Path rootDir, Path workDir, List<String> args) {
-            try {
-                modulePathBuild = (boolean) isModulePathBuild.invoke(null);
-            } catch (ReflectiveOperationException | ClassCastException e) {
-                VMError.shouldNotReachHere(e);
-            }
-            imageBuilderModeEnforcer = null;
             this.args = Collections.unmodifiableList(args);
             this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
             if (rootDir != null) {
                 this.rootDir = rootDir;
             } else {
-                if (IS_AOT) {
+                if (ImageInfo.inImageRuntimeCode()) {
                     Path executablePath = Paths.get(ProcessProperties.getExecutableName());
-                    assert executablePath != null;
                     Path binDir = executablePath.getParent();
                     Path rootDirCandidate = binDir.getParent();
                     if (rootDirCandidate.endsWith(platform)) {
@@ -451,11 +424,7 @@ public class NativeImage {
          * @return The image generator main class entry point.
          */
         public List<String> getGeneratorMainClass() {
-            if (modulePathBuild) {
-                return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
-            } else {
-                return List.of(DEFAULT_GENERATOR_CLASS_NAME + DEFAULT_GENERATOR_9PLUS_SUFFIX);
-            }
+            return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
         }
 
         /**
@@ -500,24 +469,6 @@ public class NativeImage {
         }
 
         /**
-         * @return classpath for SubstrateVM image builder components
-         */
-        public List<Path> getBuilderClasspath() {
-            if (modulePathBuild) {
-                return Collections.emptyList();
-            }
-            List<Path> result = new ArrayList<>();
-            if (libJvmciDir != null) {
-                result.addAll(getJars(libJvmciDir, "graal-sdk", "graal", "enterprise-graal"));
-            }
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            if (!modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-            }
-            return result;
-        }
-
-        /**
          * @return base clibrary paths needed for general image building
          */
         public List<Path> getBuilderCLibrariesPaths() {
@@ -533,13 +484,6 @@ public class NativeImage {
                 return inspectPath;
             }
             return null;
-        }
-
-        /**
-         * @return base image classpath needed for every image (e.g. LIBRARY_SUPPORT)
-         */
-        public List<Path> getImageProvidedClasspath() {
-            return getImageProvidedJars();
         }
 
         /**
@@ -574,6 +518,7 @@ public class NativeImage {
             boolean hasGCTimeRatio = false;
             boolean hasExitOnOutOfMemoryError = false;
             boolean hasUseParallelGC = false;
+            boolean hasUseCompressedOops = false;
 
             ProcessBuilder pb = new ProcessBuilder();
             sanitizeJVMEnvironment(pb.environment(), Map.of());
@@ -588,7 +533,7 @@ public class NativeImage {
                     while (inputScanner.hasNextLine()) {
                         String line = inputScanner.nextLine();
                         if (line.contains("bool UseJVMCINativeLibrary ")) {
-                            String value = SubstrateUtil.split(line, "=")[1];
+                            String value = StringUtil.split(line, "=")[1];
                             if (value.trim().startsWith("true")) {
                                 useJVMCINativeLibrary = true;
                             }
@@ -604,6 +549,8 @@ public class NativeImage {
                             hasMaximumHeapSizePercent = true;
                         } else if (line.contains(" UseParallelGC ")) {
                             hasUseParallelGC = true;
+                        } else if (line.contains(" UseCompressedOops ")) {
+                            hasUseCompressedOops = true;
                         }
                     }
                 }
@@ -623,15 +570,15 @@ public class NativeImage {
                             hasGCTimeRatio,
                             hasExitOnOutOfMemoryError,
                             hasMaximumHeapSizePercent,
-                            hasUseParallelGC);
+                            hasUseParallelGC,
+                            hasUseCompressedOops);
         }
 
         /**
-         * @return additional arguments for JVM that runs image builder
+         * Adds Java version specific arguments to {@code vmArgs} for the JVM that runs the image
+         * builder.
          */
-        public List<String> getBuilderJavaArgs() {
-            ArrayList<String> builderJavaArgs = new ArrayList<>();
-
+        public void addBuilderJavaArgs(List<String> vmArgs) {
             String javaVersion = String.valueOf(JavaVersionUtil.JAVA_SPEC);
             String[] flagsForVersion = graalCompilerFlags.get(javaVersion);
             if (flagsForVersion == null) {
@@ -646,28 +593,7 @@ public class NativeImage {
                                 System.getProperty("java.vm.name"),
                                 suffix));
             }
-
-            for (String line : flagsForVersion) {
-                if (!modulePathBuild && line.startsWith("--add-exports=")) {
-                    /*-
-                     * Turns e.g.
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=jdk.graal.compiler,org.graalvm.nativeimage.builder
-                     * into:
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED
-                     */
-                    builderJavaArgs.add(line.substring(0, line.lastIndexOf('=') + 1) + ALL_UNNAMED);
-                } else {
-                    builderJavaArgs.add(line);
-                }
-            }
-
-            if (getHostFlags().useJVMCINativeLibrary()) {
-                builderJavaArgs.add("-XX:+UseJVMCINativeLibrary");
-            } else if (getHostFlags().hasUseJVMCICompiler()) {
-                builderJavaArgs.add("-XX:-UseJVMCICompiler");
-            }
-
-            return builderJavaArgs;
+            vmArgs.addAll(Arrays.asList(flagsForVersion));
         }
 
         /**
@@ -683,10 +609,8 @@ public class NativeImage {
                 result.addAll(getJars(libJvmciDir, "enterprise-graal"));
                 result.addAll(getJars(libJvmciDir, "word", "collections", "nativeimage", "nativeimage-libgraal"));
             }
-            if (modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            }
+            result.addAll(createTruffleBuilderModulePath());
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
             return result;
         }
 
@@ -741,21 +665,22 @@ public class NativeImage {
         }
 
         /**
+         * Gets the command line arguments passed to the {@code native-image} command.
+         *
          * @return native-image (i.e. image build) arguments
          */
         public List<String> getBuildArgs() {
             return args;
         }
-
-        /**
-         * @return true for fallback image building
-         */
-        public boolean buildFallbackImage() {
-            return false;
-        }
     }
 
     class DriverMetaInfProcessor implements NativeImageMetaInfResourceProcessor {
+        private final Path graalvmRootDir;
+
+        DriverMetaInfProcessor(Path graalvmRootDir) {
+            this.graalvmRootDir = graalvmRootDir;
+        }
+
         @Override
         public boolean processMetaInfResource(Path classpathEntry, Path resourceRoot, Path resourcePath, MetaInfFileType type) throws IOException {
             boolean isNativeImagePropertiesFile = type.equals(MetaInfFileType.Properties);
@@ -763,24 +688,22 @@ public class NativeImage {
             Map<String, String> properties = null;
             if (isNativeImagePropertiesFile) {
                 properties = ArchiveSupport.loadProperties(Files.newInputStream(resourcePath));
-                if (config.modulePathBuild) {
-                    String forceOnModulePath = properties.get("ForceOnModulePath");
-                    if (forceOnModulePath != null) {
-                        try {
-                            ModuleFinder finder = ModuleFinder.of(classpathEntry);
-                            ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
-                            if (ref == null) {
-                                throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                                " was not found in class-path entry: " + classpathEntry + ".");
-                            }
-                        } catch (FindException e) {
+                String forceOnModulePath = properties.get("ForceOnModulePath");
+                if (forceOnModulePath != null) {
+                    try {
+                        ModuleFinder finder = ModuleFinder.of(classpathEntry);
+                        ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
+                        if (ref == null) {
                             throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                            " could not be resolved with class-path entry: " + classpathEntry + ".", e);
+                                            " was not found in class-path entry: " + classpathEntry + ".");
                         }
-                        addImageModulePath(classpathEntry, true, false);
-                        addAddedModules(forceOnModulePath);
-                        ignoreClasspathEntry = true;
+                    } catch (FindException e) {
+                        throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
+                                        " could not be resolved with class-path entry: " + classpathEntry + ".", e);
                     }
+                    addImageModulePath(classpathEntry, true, false);
+                    addAddedModules(forceOnModulePath);
+                    ignoreClasspathEntry = true;
                 }
             }
 
@@ -807,9 +730,11 @@ public class NativeImage {
                 if (imageNameValue != null) {
                     addPlainImageBuilderArg(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString());
                 }
-                forEachPropertyValue(properties.get("JavaArgs"), NativeImage.this::addImageBuilderJavaArgs, resolver);
-                forEachPropertyValue(properties.get("Args"), args, resolver);
-                forEachPropertyValue(properties.get("ProvidedHostedOptions"), apiOptionHandler::injectKnownHostedOption, resolver);
+                if (classpathEntry.startsWith(graalvmRootDir) || !isCompatibilityModeEnabled()) {
+                    forEachPropertyValue(properties.get("JavaArgs"), NativeImage.this::addImageBuilderJavaArgs, resolver);
+                    forEachPropertyValue(properties.get("Args"), args, resolver);
+                    forEachPropertyValue(properties.get("ProvidedHostedOptions"), apiOptionHandler::injectKnownHostedOption, resolver);
+                }
             } else {
                 args.accept(oH(type.optionKey) + resourceRoot.relativize(resourcePath));
             }
@@ -827,7 +752,7 @@ public class NativeImage {
 
         @Override
         public void showVerboseMessage(String message) {
-            NativeImage.this.showVerboseMessage(isVerbose(), message);
+            NativeImage.showVerboseMessage(isVerbose(), message);
         }
 
         @Override
@@ -840,92 +765,6 @@ public class NativeImage {
         }
     }
 
-    private ArrayList<String> createFallbackBuildArgs() {
-        ArrayList<String> buildArgs = new ArrayList<>();
-        buildArgs.add(oHEnabled(SubstrateOptions.UnlockExperimentalVMOptions));
-        Collection<String> fallbackSystemProperties = customJavaArgs.stream()
-                        .filter(s -> s.startsWith("-D"))
-                        .collect(Collectors.toCollection(LinkedHashSet::new));
-        String fallbackExecutorSystemPropertyOption = oH(FallbackExecutor.Options.FallbackExecutorSystemProperty);
-        for (String property : fallbackSystemProperties) {
-            buildArgs.add(injectHostedOptionOrigin(fallbackExecutorSystemPropertyOption + property, OptionOrigin.originDriver));
-        }
-
-        List<String> runtimeJavaArgs = imageBuilderArgs.stream()
-                        .filter(s -> s.startsWith(oRRuntimeJavaArg))
-                        .toList();
-        buildArgs.addAll(runtimeJavaArgs);
-
-        List<String> fallbackExecutorJavaArgs = imageBuilderArgs.stream()
-                        .filter(s -> s.startsWith(oHFallbackExecutorJavaArg))
-                        .toList();
-        buildArgs.addAll(fallbackExecutorJavaArgs);
-
-        buildArgs.add(oHEnabled(SubstrateOptions.BuildOutputSilent));
-        buildArgs.add(oHEnabled(SubstrateOptions.ParseRuntimeOptions));
-        Path imagePathPath;
-        try {
-            imagePathPath = canonicalize(imagePath);
-        } catch (NativeImage.NativeImageError | InvalidPathException e) {
-            throw showError("The given " + oHPath + imagePath + " argument does not specify a valid path", e);
-        }
-        boolean[] isPortable = {true};
-        String classpathString = imageClasspath.stream()
-                        .map(path -> {
-                            try {
-                                return imagePathPath.relativize(path);
-                            } catch (IllegalArgumentException e) {
-                                isPortable[0] = false;
-                                return path;
-                            }
-                        })
-                        .map(Path::toString)
-                        .collect(Collectors.joining(File.pathSeparator));
-        if (!isPortable[0]) {
-            LogUtils.warning("The produced fallback image will not be portable, because not all classpath entries" +
-                            " could be relativized (e.g., they are on another drive).");
-        }
-        buildArgs.add(oHPath + imagePathPath.toString());
-        buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorClasspath) + classpathString);
-        buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorMainClass) + mainClass);
-        buildArgs.add(oHDisabled(SubstrateOptions.UnlockExperimentalVMOptions));
-
-        /*
-         * The fallback image on purpose captures the Java home directory used for image generation,
-         * see field FallbackExecutor.buildTimeJavaHome
-         */
-        buildArgs.add(oHDisabled(SubstrateOptions.DetectUserDirectoriesInImageHeap));
-
-        buildArgs.add(FallbackExecutor.class.getName());
-        buildArgs.add(imageName);
-
-        defaultOptionHandler.addFallbackBuildArgs(buildArgs);
-        for (OptionHandler<? extends NativeImage> handler : optionHandlers) {
-            handler.addFallbackBuildArgs(buildArgs);
-        }
-        return buildArgs;
-    }
-
-    private static final class FallbackBuildConfiguration extends BuildConfiguration {
-
-        private final List<String> fallbackBuildArgs;
-
-        private FallbackBuildConfiguration(NativeImage original) {
-            super(original.config);
-            fallbackBuildArgs = original.createFallbackBuildArgs();
-        }
-
-        @Override
-        public List<String> getBuildArgs() {
-            return fallbackBuildArgs;
-        }
-
-        @Override
-        public boolean buildFallbackImage() {
-            return true;
-        }
-    }
-
     private final DriverMetaInfProcessor metaInfProcessor;
 
     static final String CONFIG_FILE_ENV_VAR_KEY = "NATIVE_IMAGE_CONFIG_FILE";
@@ -933,7 +772,7 @@ public class NativeImage {
     @SuppressWarnings("this-escape")
     protected NativeImage(BuildConfiguration config) {
         this.config = config;
-        this.metaInfProcessor = new DriverMetaInfProcessor();
+        this.metaInfProcessor = new DriverMetaInfProcessor(config.rootDir);
         this.archiveSupport = new ArchiveSupport(isVerbose());
 
         String configFile = System.getenv(CONFIG_FILE_ENV_VAR_KEY);
@@ -1034,6 +873,8 @@ public class NativeImage {
         addImageBuilderJavaArgs("-Dorg.graalvm.version=" + graalvmVersion);
         addImageBuilderJavaArgs("-Dcom.oracle.graalvm.isaot=true");
         addImageBuilderJavaArgs("-Djava.system.class.loader=" + CUSTOM_SYSTEM_CLASS_LOADER);
+        addImageBuilderJavaArgs("-Djava.util.concurrent.ForkJoinPool.common.exceptionHandler=" + CUSTOM_COMMON_FORK_JOIN_POOL_EXCEPTION_HANDLER);
+        addImageBuilderJavaArgs("-Djava.util.concurrent.ForkJoinPool.common.threadFactory=" + CUSTOM_COMMON_FORK_JOIN_POOL_THREAD_FACTORY);
 
         addImageBuilderJavaArgs("-D" + ImageInfo.PROPERTY_IMAGE_CODE_KEY + "=" + ImageInfo.PROPERTY_IMAGE_CODE_VALUE_BUILDTIME);
 
@@ -1047,11 +888,6 @@ public class NativeImage {
     }
 
     private void completeOptionArgs() {
-        LinkedHashSet<EnabledOption> enabledOptions = optionRegistry.getEnabledOptions();
-        /* Any use of MacroOptions opts-out of auto-fallback and activates --no-fallback */
-        if (!enabledOptions.isEmpty()) {
-            addPlainImageBuilderArg(oHFallbackThreshold + SubstrateOptions.NoFallback, OptionOrigin.originDriver);
-        }
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.engine.PreinitializeContexts=", ",", Function.identity()); // legacy
         consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.image-build-time.PreinitializeContexts=", ",", Function.identity());
     }
@@ -1217,8 +1053,6 @@ public class NativeImage {
         processNativeImageArgs();
         apiOptionHandler.validateExperimentalOptions();
 
-        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-
         if (config.getBuilderInspectServerPath() != null) {
             addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
         }
@@ -1298,7 +1132,7 @@ public class NativeImage {
             }
         }
 
-        addImageBuilderJavaArgs(customJavaArgs.toArray(new String[0]));
+        addImageBuilderJavaArgs(customJavaArgs);
 
         List<String> userMemoryFlags = new ArrayList<>();
         for (String arg : imageBuilderJavaArgs) {
@@ -1306,7 +1140,8 @@ public class NativeImage {
                 userMemoryFlags.add(arg);
             }
         }
-        List<String> memoryFlagsToAdd = MemoryUtil.heuristicMemoryFlags(config.getHostFlags(), userMemoryFlags);
+        HostFlags hostFlags = config.getHostFlags();
+        List<String> memoryFlagsToAdd = MemoryUtil.heuristicMemoryFlags(hostFlags, userMemoryFlags);
         for (String memoryFlag : memoryFlagsToAdd.reversed()) {
             imageBuilderJavaArgs.addFirst(memoryFlag);
         }
@@ -1349,8 +1184,7 @@ public class NativeImage {
                 boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
                     if (buildExecutable && !hasMainClassModule && !hasMainClass && !listModules) {
-                        String moduleMsg = config.modulePathBuild ? " (or <module>/<mainclass>)" : "";
-                        showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
+                        showError("Please specify class (or <module>/<mainclass>) containing the main entry point method. (see --help)");
                     }
                 } else if (!moduleOptionMode) {
                     /* extraImageArgs main-class overrules previous main-class specification */
@@ -1466,43 +1300,89 @@ public class NativeImage {
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageClasspath);
 
         LinkedHashSet<Path> finalImageProvidedJars = new LinkedHashSet<>(this.imageProvidedJars);
-        if (config.modulePathBuild) {
-            finalImageProvidedJars.addAll(config.getImageProvidedModulePath());
-            finalImageModulePath.addAll(finalImageProvidedJars);
-        } else {
-            finalImageProvidedJars.addAll(config.getImageProvidedClasspath());
-            finalImageClasspath.addAll(finalImageProvidedJars);
-        }
+        finalImageProvidedJars.addAll(config.getImageProvidedModulePath());
+        finalImageModulePath.addAll(finalImageProvidedJars);
         finalImageProvidedJars.forEach(this::processClasspathNativeImageMetaInf);
-
-        if (!config.buildFallbackImage()) {
-            Optional<ArgumentEntry> fallbackThresholdEntry = getHostedOptionArgument(imageBuilderArgs, oHFallbackThreshold);
-            if (fallbackThresholdEntry.isPresent() && fallbackThresholdEntry.get().value.equals("" + SubstrateOptions.ForceFallback)) {
-                /* Bypass regular build and proceed with fallback image building */
-                return ExitStatus.FALLBACK_IMAGE.getValue();
-            }
-        }
+        imageBuilderJavaArgs.add("-D" + SharedConstants.IMAGE_PROVIDED_JARS_ENV_VARIABLE + "=" + String.join(File.pathSeparator, finalImageProvidedJars.stream().map(Path::toString).toList()));
 
         if (!limitModules.isEmpty()) {
-            imageBuilderJavaArgs.add("-D" + ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES + "=" + String.join(",", limitModules));
+            imageBuilderJavaArgs.add("-D" + HostedModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES + "=" + String.join(",", limitModules));
         }
-        if (config.modulePathBuild && !finalImageClasspath.isEmpty()) {
+        if (!finalImageClasspath.isEmpty()) {
             imageBuilderJavaArgs.add(DefaultOptionHandler.addModulesOption + "=ALL-DEFAULT");
         }
         // allow native access for all modules on the image builder module path
         var enableNativeAccessModules = getModulesFromPath(imageBuilderModulePath).keySet();
         imageBuilderJavaArgs.add("--enable-native-access=" + String.join(",", enableNativeAccessModules));
+        // pass the number of warnings to the builder process
+        imageBuilderArgs.add(oH(SubstrateOptions.DriverWarningsCount) + LogUtils.getWarningsCount());
 
         boolean useColorfulOutput = configureBuildOutput();
 
-        List<String> finalImageBuilderJavaArgs = Stream.concat(config.getBuilderJavaArgs().stream(), imageBuilderJavaArgs.stream()).collect(Collectors.toList());
+        List<String> args = new ArrayList<>();
+        config.addBuilderJavaArgs(args);
+        disableJarGraalJIT(args, hostFlags, imageBuilderJavaArgs);
+        args.addAll(imageBuilderJavaArgs);
+        List<String> finalImageBuilderJavaArgs = Collections.unmodifiableList(args);
+
         try {
-            return buildImage(finalImageBuilderJavaArgs, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+            return buildImage(finalImageBuilderJavaArgs, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
         } finally {
             if (useColorfulOutput) {
                 performANSIReset();
             }
         }
+    }
+
+    /**
+     * Adds HotSpot VM arguments to {@code vmArgs} that prevents using jargraal as the JIT when
+     * running Native Image. This is an untested (and uninteresting) configuration that's better to
+     * forbid than try to support.
+     *
+     * @param suffixVmArgs VM arguments that will be appended to the Native Image JVM launcher after
+     *            {@code vmArgs}
+     */
+    private static void disableJarGraalJIT(List<String> vmArgs, HostFlags hostFlags, List<String> suffixVmArgs) {
+        Boolean useJVMCINativeLibrary = getXXBoolArg(suffixVmArgs, "UseJVMCINativeLibrary");
+        if (useJVMCINativeLibrary == null) {
+            if (hostFlags.useJVMCINativeLibrary()) {
+                vmArgs.add("-XX:+UseJVMCINativeLibrary");
+                useJVMCINativeLibrary = true;
+            } else {
+                useJVMCINativeLibrary = false;
+            }
+        }
+        if (!useJVMCINativeLibrary) {
+            if (hostFlags.hasUseJVMCICompiler()) {
+                Boolean useJVMCICompiler = getXXBoolArg(suffixVmArgs, "UseJVMCICompiler");
+                if (useJVMCICompiler == Boolean.TRUE) {
+                    throw NativeImage.showError("Using jargraal as JIT (i.e. -XX:+UseJVMCICompiler -XX:-UseJVMCINativeLibrary) is not supported when Native Image is running on HotSpot.");
+                }
+                if (useJVMCICompiler == null) {
+                    vmArgs.add("-XX:-UseJVMCICompiler");
+                }
+            }
+        }
+    }
+
+    /**
+     * Gets the last value specified in {@code args} of the {@code -XX} HotSpot flag whose name is
+     * {@code name}.
+     *
+     * @return the last value specified or null if the named flag is not present in {@code args}
+     */
+    private static Boolean getXXBoolArg(List<String> args, String name) {
+        String positive = "-XX:+" + name;
+        String negative = "-XX:-" + name;
+        for (String arg : args.reversed()) {
+            if (arg.equals(positive)) {
+                return true;
+            }
+            if (arg.equals(negative)) {
+                return false;
+            }
+        }
+        return null;
     }
 
     private static String validateImageName(String imageName) {
@@ -1551,7 +1431,12 @@ public class NativeImage {
     }
 
     private static Boolean getHostedOptionBooleanArgumentValue(List<String> args, OptionKey<Boolean> option) {
-        String locationAgnosticBooleanPattern = "^" + oH + "[+-]" + option.getName() + "(@[^=]*)?$";
+        String name = option.getName();
+        return getHostedOptionBooleanArgumentValue(args, name);
+    }
+
+    private static Boolean getHostedOptionBooleanArgumentValue(List<String> args, String optionName) {
+        String locationAgnosticBooleanPattern = "^" + oH + "[+-]" + optionName + "(@[^=]*)?$";
         Pattern pattern = Pattern.compile(locationAgnosticBooleanPattern);
         Boolean result = null;
         for (String arg : args) {
@@ -1563,8 +1448,12 @@ public class NativeImage {
         return result;
     }
 
+    private boolean isCompatibilityModeEnabled() {
+        return Boolean.TRUE.equals(getHostedOptionBooleanArgumentValue(imageBuilderArgs, COMPATIBILITY_MODE_FLAG_NAME));
+    }
+
     private boolean shouldAddCWDToCP() {
-        if (config.buildFallbackImage() || printFlagsOptionQuery != null || printFlagsWithExtraHelpOptionQuery != null) {
+        if (printFlagsOptionQuery != null || printFlagsWithExtraHelpOptionQuery != null) {
             return false;
         }
 
@@ -1705,24 +1594,15 @@ public class NativeImage {
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> cp, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
                     LinkedHashSet<Path> imagemp) {
         List<String> arguments = new ArrayList<>(javaArgs);
 
-        if (!cp.isEmpty()) {
-            arguments.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        }
+        assert !mp.isEmpty() : "Empty builder module-path";
+        List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        arguments.addAll(strings);
 
-        if (!mp.isEmpty()) {
-            List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
-            arguments.addAll(strings);
-        }
-
-        if (useBundle()) {
-            LogUtils.warning("Native Image Bundles are an experimental feature.");
-        }
-
-        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, b) -> a;
+        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, _) -> a;
         Function<String, String> imageArgsTransformer = rawArg -> apiOptionHandler.transformBuilderArgument(rawArg, substituteAuxiliaryPath);
         List<String> finalImageArgs = imageArgs.stream().map(imageArgsTransformer).collect(Collectors.toList());
 
@@ -1733,43 +1613,65 @@ public class NativeImage {
         List<Path> localImageModulePath = imagemp.stream().map(substituteModulePath).collect(Collectors.toList());
         Map<String, Path> applicationModules = getModulesFromPath(localImageModulePath);
 
+        String selectEspressoGuest = "-D" + GuestAccess.NAME_PROPERTY + "=espresso";
+        boolean useEspressoGuest = javaArgs.contains(selectEspressoGuest);
+
         if (!applicationModules.isEmpty()) {
-            // Remove modules that we already have built-in
-            applicationModules.keySet().removeAll(getBuiltInModules());
-            // Remove modules that we get from the builder
-            applicationModules.keySet().removeAll(getModulesFromPath(mp).keySet());
+
+            if (!useEspressoGuest) {
+                /* Remove modules that we already have built-in */
+                applicationModules.keySet().removeAll(getBuiltInModules());
+
+                /*
+                 * When using HostVMAccess, the NativeImageClassLoader delegates to
+                 * ClassLoaders#appClassLoader. In that configuration, a module (such as
+                 * org.graalvm.nativeimage.guest.staging) on both the image module path and builder
+                 * module path results in resolving the module twice, causing problems during module
+                 * resolution.
+                 */
+                applicationModules.keySet().removeAll(getModulesFromPath(mp).keySet());
+            }
         }
         List<Path> finalImageModulePath = applicationModules.values().stream().toList();
 
-        /*
-         * Make sure to add all system modules required by the application that might not be part of
-         * the boot module layer of image builder. If we do not do this, the image builder will fail
-         * to create the image-build module layer, as it will attempt to define system modules to
-         * the host VM.
-         */
-        Set<String> implicitlyRequiredSystemModules = getImplicitlyRequiredSystemModules(finalImageModulePath);
-        addModules.addAll(implicitlyRequiredSystemModules);
+        if (!useEspressoGuest) {
+            /*
+             * Make sure to add all system modules required by the application that might not be
+             * part of the boot module layer of image builder. If we do not do this, the image
+             * builder will fail to create the image-build module layer, as it will attempt to
+             * define system modules to the host VM. When running with Espresso Guest Context this
+             * is not needed because the application gets loaded in a VM Context isolated from the
+             * builder VM.
+             */
+            Set<String> implicitlyRequiredSystemModules = getImplicitlyRequiredSystemModules(mp, finalImageModulePath);
+            addModules.addAll(implicitlyRequiredSystemModules);
+        }
 
         if (!addModules.isEmpty()) {
 
-            arguments.add("-D" + ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES + "=" +
+            arguments.add("-D" + HostedModuleSupport.PROPERTY_IMAGE_EXPLICITLY_ADDED_MODULES + "=" +
                             String.join(",", addModules));
 
-            List<String> addModulesForBuilderVM = new ArrayList<>();
-            for (String moduleNameInAddModules : addModules) {
-                if (!applicationModules.containsKey(moduleNameInAddModules)) {
-                    /*
-                     * Module names given to native-image --add-modules that are not referring to
-                     * modules that are passed to native-image via -p/--module-path are considered
-                     * to be part of the module-layer that contains the builder itself. Those module
-                     * names need to be passed as --add-modules arguments to the builder VM.
-                     */
-                    addModulesForBuilderVM.add(moduleNameInAddModules);
+            if (!useEspressoGuest) {
+                List<String> addModulesForBuilderVM = new ArrayList<>();
+                for (String moduleNameInAddModules : addModules) {
+                    if (!applicationModules.containsKey(moduleNameInAddModules)) {
+                        /*
+                         * Module names given to native-image --add-modules that are not referring
+                         * to modules that are passed to native-image via -p/--module-path are
+                         * considered to be part of the module-layer that contains the builder
+                         * itself. Those module names need to be passed as --add-modules arguments
+                         * to the builder VM. When running with Espresso Guest Context this is not
+                         * needed because the application gets loaded in a VM Context isolated from
+                         * the builder VM.
+                         */
+                        addModulesForBuilderVM.add(moduleNameInAddModules);
+                    }
                 }
-            }
 
-            if (!addModulesForBuilderVM.isEmpty()) {
-                arguments.add(DefaultOptionHandler.addModulesOption + "=" + String.join(",", addModulesForBuilderVM));
+                if (!addModulesForBuilderVM.isEmpty()) {
+                    arguments.add(DefaultOptionHandler.addModulesOption + "=" + String.join(",", addModulesForBuilderVM));
+                }
             }
         }
 
@@ -1867,20 +1769,7 @@ public class NativeImage {
         if (OS.WINDOWS.isCurrent()) {
             WindowsBuildEnvironmentUtil.propagateEnv(environment);
         }
-        environment.put(ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM, Boolean.toString(config.modulePathBuild));
         environment.put(SharedConstants.DRIVER_TEMP_DIR_ENV_VARIABLE, config.driverTempDir.toString());
-        if (!config.modulePathBuild) {
-            /**
-             * The old mode of running the image generator on the class path, which was deprecated
-             * in GraalVM 22.2, is no longer allowed. Using the environment variable
-             * `USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM=false` that used to enable the
-             * class-path-mode now leads to an early image build error. We really want to report
-             * this as an error, because just ignoring the environment variable would most likely
-             * lead to obscure image build errors later on.
-             */
-            throw showError("Running the image generator on the class path is no longer possible. Setting the environment variable " +
-                            ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM + "=false is no longer supported.");
-        }
 
         completeCommandList.addAll(0, environment.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue()).sorted().toList());
         completeCommandList.add(javaExecutable);
@@ -1908,11 +1797,10 @@ public class NativeImage {
             }
             p = pb.start();
             if (useBundle()) {
-                var internalOutputDir = bundleSupport.outputDir.toString();
-                var externalOutputDir = bundleSupport.getExternalOutputDir().toString();
-                Function<String, String> filter = line -> line.replace(internalOutputDir, externalOutputDir);
-                ProcessOutputTransformer.attach(p.getInputStream(), filter, System.out);
-                ProcessOutputTransformer.attach(p.getErrorStream(), filter, System.err);
+                ProcessOutputTransformer.attach(p.getInputStream(), bundleSupport::cleanupBuilderOutput, System.out);
+                // Checkstyle: allow System.err (stderr support)
+                ProcessOutputTransformer.attach(p.getErrorStream(), bundleSupport::cleanupBuilderOutput, System.err);
+                // Checkstyle: disallow System.err
             }
             imageBuilderPid = p.pid();
             return p.waitFor();
@@ -1925,16 +1813,16 @@ public class NativeImage {
         }
     }
 
-    private record ProcessOutputTransformer(InputStream in, Function<String, String> filter, PrintStream out) implements Runnable {
+    private record ProcessOutputTransformer(InputStream in, Function<String, String> mapper, PrintStream out) implements Runnable {
 
-        static void attach(InputStream in, Function<String, String> filter, PrintStream out) {
-            Thread.ofVirtual().start(new ProcessOutputTransformer(in, filter, out));
+        static void attach(InputStream in, Function<String, String> mapper, PrintStream out) {
+            Thread.ofVirtual().start(new ProcessOutputTransformer(in, mapper, out));
         }
 
         @Override
         public void run() {
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
-                reader.lines().map(filter).forEach(out::println);
+                reader.lines().map(mapper).forEach(out::println);
             } catch (IOException e) {
                 throw showError("Unable to process stdout/stderr of image builder process", e);
             }
@@ -1967,14 +1855,14 @@ public class NativeImage {
         Path jdkRoot = config.rootDir;
         try {
             var reader = ImageReader.open(jdkRoot.resolve("lib/modules"));
-            return new LinkedHashSet<>(reader.findNode("/modules").getChildNames().map(s -> s.substring("/modules/".length())).toList());
+            return new LinkedHashSet<>(List.of(reader.getModuleNames()));
         } catch (IOException e) {
             throw showError("Unable to determine builtin modules of JDK in " + jdkRoot, e);
         }
     }
 
-    private Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
+    private static Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
+        if (modulePath.isEmpty()) {
             return Map.of();
         }
 
@@ -1993,37 +1881,61 @@ public class NativeImage {
         return mrefs;
     }
 
-    private Set<String> getImplicitlyRequiredSystemModules(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
+    private Set<String> getImplicitlyRequiredSystemModules(Collection<Path> builderMP, Collection<Path> imageMP) {
+        if (imageMP.isEmpty()) {
             return Set.of();
         }
 
-        ModuleFinder systemModuleFinder = ModuleFinder.ofSystem();
-        ModuleFinder appModuleFinder = ModuleFinder.of(modulePath.toArray(Path[]::new));
-        ModuleFinder finder = ModuleFinder.compose(appModuleFinder, systemModuleFinder);
+        /* All modules the builder transitively depends on */
+        Set<String> builderRequired = modulePathRequiredModules(builderMP);
+        /*
+         * N.B. without Espresso Guest Context we need to combine builderMP and imageMP because the
+         * loader for imageMP has the loader that loaded builderMP as parent.
+         */
+        Set<Path> combinedMP = Stream.concat(builderMP.stream(), imageMP.stream()).collect(Collectors.toUnmodifiableSet());
+        /* All modules the application transitively depends on */
+        Set<String> imageRequired = modulePathRequiredModules(combinedMP);
+
+        Set<String> remainingImageRequiredBuiltInModules = new HashSet<>(imageRequired); // noEconomicSet(api)
+        /* Only modules not already required by the builder */
+        remainingImageRequiredBuiltInModules.removeAll(builderRequired);
+        /* Only built-in modules not already required by the builder */
+        remainingImageRequiredBuiltInModules.retainAll(getBuiltInModules());
+        return Set.copyOf(remainingImageRequiredBuiltInModules);
+    }
+
+    Set<String> modulePathRequiredModules(Collection<Path> modulePath) {
+
+        ModuleFinder systemFinder = ModuleFinder.ofSystem();
+        ModuleFinder modulePathFinder = ModuleFinder.of(modulePath.toArray(Path[]::new));
+        ModuleFinder finder = ModuleFinder.compose(modulePathFinder, systemFinder);
         Map<String, ModuleReference> modules = finder.findAll().stream()
                         .collect(Collectors.toMap(m -> m.descriptor().name(), m -> m));
 
-        Set<String> applicationModulePathRequiredModules = new HashSet<>();
+        Set<String> modulePathRequiredModules = new HashSet<>(); // noEconomicSet(api)
         Queue<ModuleReference> discoveryQueue = new ArrayDeque<>(modules.values());
 
         while (!discoveryQueue.isEmpty()) {
             ModuleReference module = discoveryQueue.poll();
+            if ("java.se".equals(module.descriptor().name())) {
+                /* Skip java.se-module pseudo-dependencies */
+                continue;
+            }
             Set<String> requiredModules = getRequiredModules(module);
             List<ModuleReference> requiredModuleReferences = requiredModules.stream()
                             .map(mn -> modules.getOrDefault(mn, null))
                             .filter(Objects::nonNull)
                             .toList();
             discoveryQueue.addAll(requiredModuleReferences);
-            applicationModulePathRequiredModules.addAll(requiredModules);
+            modulePathRequiredModules.addAll(requiredModules);
         }
 
-        applicationModulePathRequiredModules.retainAll(getBuiltInModules());
-        return applicationModulePathRequiredModules;
+        return Set.copyOf(modulePathRequiredModules);
     }
 
     private static Set<String> getRequiredModules(ModuleReference mref) {
         return mref.descriptor().requires().stream()
+                        .map(r -> Objects.requireNonNull(r, () -> "ModuleReference " + mref + " requires-Set has null-entries"))
                         .map(ModuleDescriptor.Requires::name)
                         .collect(Collectors.toSet());
     }
@@ -2087,34 +1999,21 @@ public class NativeImage {
         performBuild(new BuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
     }
 
-    public static List<String> translateAPIOptions(List<String> arguments) {
-        var handler = new APIOptionHandler(defaultNativeImageProvider.apply(new BuildConfiguration(arguments)));
-        var argumentQueue = new ArgumentQueue(OptionOrigin.originDriver);
-        handler.nativeImage.config.args.forEach(argumentQueue::add);
-        List<String> translatedOptions = new ArrayList<>();
-        while (!argumentQueue.isEmpty()) {
-            String translatedOption = handler.translateOption(argumentQueue);
-            String originalOption = argumentQueue.poll();
-            translatedOptions.add(translatedOption != null ? translatedOption : originalOption);
-        }
-        return translatedOptions;
-    }
-
     protected static void performBuild(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
         try {
             build(config, nativeImageProvider);
         } catch (NativeImageError e) {
             String message = e.getMessage();
             if (message != null) {
-                NativeImage.show(System.err::println, "Error: " + message);
+                NativeImage.show(System.out::println, "Error: " + message);
             }
             Throwable cause = e.getCause();
             while (cause != null) {
-                NativeImage.show(System.err::println, "Caused by: " + cause);
+                NativeImage.show(System.out::println, "Caused by: " + cause);
                 cause = cause.getCause();
             }
             if (config.getBuildArgs().contains("--verbose")) {
-                e.printStackTrace();
+                e.printStackTrace(System.out);
             }
             System.exit(e.exitCode);
         }
@@ -2122,55 +2021,103 @@ public class NativeImage {
     }
 
     private static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
-        NativeImage nativeImage = nativeImageProvider.apply(config);
-        if (config.getBuildArgs().isEmpty()) {
-            nativeImage.showMessage(usageText);
-        } else {
-            try {
-                nativeImage.prepareImageBuildArgs();
-            } catch (NativeImageError e) {
-                if (nativeImage.isVerbose()) {
-                    throw showError("Requirements for building native images are not fulfilled", e);
-                } else {
-                    throw showError("Requirements for building native images are not fulfilled [cause: " + e.getMessage() + "]", null);
+        List<String> buildArgs = config.getBuildArgs();
+        if (buildArgs.isEmpty()) {
+            showMessage(USAGE_TEXT);
+            return;
+        }
+        for (String arg : buildArgs) {
+            boolean exit = true;
+            switch (arg) {
+                case "--help" -> {
+                    showMessage(HELP_TEXT);
+                    showNewline();
+                    nativeImageProvider.apply(config).apiOptionHandler.printOptions(NativeImage::showMessage, false);
+                    showNewline();
                 }
+                case "--help-extra" -> {
+                    showMessage(HELP_EXTRA_TEXT);
+                    nativeImageProvider.apply(config).apiOptionHandler.printOptions(NativeImage::showMessage, true);
+                    showNewline();
+                }
+                case "--version" -> printVersion();
+                default -> exit = false;
             }
-
-            try {
-                int exitStatusCode = nativeImage.completeImageBuild();
-                switch (ExitStatus.of(exitStatusCode)) {
-                    case OK:
-                        break;
-                    case BUILDER_ERROR:
-                        /* Exit, builder has handled error reporting. */
-                        throw showError(null, null, exitStatusCode);
-                    case FALLBACK_IMAGE:
-                        nativeImage.showMessage("Generating fallback image...");
-                        build(new FallbackBuildConfiguration(nativeImage), nativeImageProvider);
-                        LogUtils.warning("Image '" + nativeImage.imageName + "' is a fallback image that requires a JDK for execution (use --" + SubstrateOptions.OptionNameNoFallback +
-                                        " to suppress fallback image generation and to print more detailed information why a fallback image was necessary).");
-                        break;
-                    case REBUILD_AFTER_ANALYSIS:
-                        build(config, buildConfig -> {
-                            NativeImage rebuildNativeImage = nativeImageProvider.apply(buildConfig);
-                            rebuildNativeImage.addImageBuilderJavaArgs(String.format("-D%s=true", SharedConstants.REBUILD_AFTER_ANALYSIS_MARKER));
-                            return rebuildNativeImage;
-                        });
-                        break;
-                    case OUT_OF_MEMORY, OUT_OF_MEMORY_KILLED:
-                        nativeImage.showOutOfMemoryWarning();
-                        throw showError(null, null, exitStatusCode);
-                    default:
-                        String message = String.format("Image build request for '%s' (pid: %d, path: %s) failed with exit status %d",
-                                        nativeImage.imageName, nativeImage.imageBuilderPid, nativeImage.imagePath, exitStatusCode);
-                        throw showError(message, null, exitStatusCode);
-                }
-            } finally {
-                if (nativeImage.useBundle()) {
-                    nativeImage.bundleSupport.complete();
-                }
+            if (exit) {
+                System.exit(ExitStatus.OK.getValue());
             }
         }
+        NativeImage nativeImage = nativeImageProvider.apply(config);
+        try {
+            nativeImage.prepareImageBuildArgs();
+        } catch (NativeImageError e) {
+            if (nativeImage.isVerbose()) {
+                throw showError("Requirements for building native images are not fulfilled", e);
+            } else {
+                throw showError("Requirements for building native images are not fulfilled [cause: " + e.getMessage() + "]", null);
+            }
+        }
+        try {
+            int exitStatusCode = nativeImage.completeImageBuild();
+            switch (ExitStatus.of(exitStatusCode)) {
+                case OK:
+                    break;
+                case BUILDER_ERROR:
+                    /* Exit, builder has handled error reporting. */
+                    throw showError(null, null, exitStatusCode);
+                case REBUILD_AFTER_ANALYSIS:
+                    build(config, buildConfig -> {
+                        NativeImage rebuildNativeImage = nativeImageProvider.apply(buildConfig);
+                        rebuildNativeImage.addImageBuilderJavaArgs(String.format("-D%s=true", SharedConstants.REBUILD_AFTER_ANALYSIS_MARKER));
+                        return rebuildNativeImage;
+                    });
+                    break;
+                case OUT_OF_MEMORY, OUT_OF_MEMORY_KILLED:
+                    nativeImage.showOutOfMemoryWarning();
+                    throw showError(null, null, exitStatusCode);
+                default:
+                    String message = String.format("Image build request for '%s' (pid: %d, path: %s) failed with exit status %d",
+                                    nativeImage.imageName, nativeImage.imageBuilderPid, nativeImage.imagePath, exitStatusCode);
+                    throw showError(message, null, exitStatusCode);
+            }
+        } finally {
+            if (nativeImage.useBundle()) {
+                nativeImage.bundleSupport.complete();
+            }
+        }
+    }
+
+    /**
+     * Prints version output following
+     * "src/java.base/share/classes/java/lang/VersionProps.java.template#print(boolean)".
+     */
+    public static void printVersion() {
+        /* First line: platform version. */
+        String javaVersion = System.getProperty("java.version");
+        String javaVersionDate = System.getProperty("java.version.date");
+        System.out.printf("native-image %s %s%n", javaVersion, javaVersionDate);
+
+        /* Second line: runtime version (ie, libraries). */
+        String javaRuntimeVersion = System.getProperty("java.runtime.version");
+
+        String jdkDebugLevel = System.getProperty("jdk.debug", "release");
+        if ("release".equals(jdkDebugLevel)) {
+            /* Do not show debug level "release" builds */
+            jdkDebugLevel = "";
+        } else {
+            jdkDebugLevel = jdkDebugLevel + " ";
+        }
+
+        String javaRuntimeName = System.getProperty("java.runtime.name");
+        String vendorVersion = VM.getVendorVersion();
+        vendorVersion = vendorVersion.isEmpty() ? "" : " " + vendorVersion;
+        System.out.printf("%s%s (%sbuild %s)%n", javaRuntimeName, vendorVersion, jdkDebugLevel, javaRuntimeVersion);
+
+        /* Third line: VM information. */
+        String javaVMName = System.getProperty("java.vm.name");
+        String javaVMVersion = System.getProperty("java.vm.version");
+        String javaVMInfo = System.getProperty("java.vm.info");
+        System.out.printf("%s%s (%sbuild %s, %s)%n", javaVMName, vendorVersion, jdkDebugLevel, javaVMVersion, javaVMInfo);
     }
 
     Path canonicalize(Path path) {
@@ -2204,15 +2151,11 @@ public class NativeImage {
     }
 
     public void addAddedModules(String addModulesArg) {
-        addModules.addAll(Arrays.asList(SubstrateUtil.split(addModulesArg, ",")));
+        addModules.addAll(Arrays.asList(StringUtil.split(addModulesArg, ",")));
     }
 
     public void addLimitedModules(String limitModulesArg) {
-        limitModules.addAll(Arrays.asList(SubstrateUtil.split(limitModulesArg, ",")));
-    }
-
-    void addImageBuilderClasspath(Path classpath) {
-        imageBuilderClasspath.add(canonicalize(classpath));
+        limitModules.addAll(Arrays.asList(StringUtil.split(limitModulesArg, ",")));
     }
 
     void addImageProvidedJars(Path path) {
@@ -2326,8 +2269,6 @@ public class NativeImage {
     }
 
     void addImageModulePath(Path modulePathEntry, boolean strict, boolean processMetaInf) {
-        enableModulePathBuild();
-
         Path mpEntry;
         try {
             mpEntry = canonicalize(modulePathEntry);
@@ -2456,16 +2397,8 @@ public class NativeImage {
         jarOptionMode = val;
     }
 
-    void setModuleOptionMode(boolean val) {
-        enableModulePathBuild();
-        moduleOptionMode = val;
-    }
-
-    private void enableModulePathBuild() {
-        if (!config.modulePathBuild) {
-            NativeImage.showError("Module options not allowed in this image build. Reason: " + config.imageBuilderModeEnforcer);
-        }
-        config.modulePathBuild = true;
+    void enableModuleOption() {
+        moduleOptionMode = true;
     }
 
     boolean isVerbose() {
@@ -2504,25 +2437,25 @@ public class NativeImage {
         this.printFlagsWithExtraHelpOptionQuery = val;
     }
 
-    void showVerboseMessage(boolean show, String message) {
+    static void showVerboseMessage(boolean show, String message) {
         if (show) {
             show(System.out::println, message);
         }
     }
 
-    void showMessage(String message) {
+    static void showMessage(String message) {
         show(System.out::println, message);
     }
 
-    void showMessage(String format, Object... args) {
+    static void showMessage(String format, Object... args) {
         showMessage(String.format(format, args));
     }
 
-    void showNewline() {
+    static void showNewline() {
         System.out.println();
     }
 
-    void showMessagePart(String message) {
+    static void showMessagePart(String message) {
         show(s -> {
             System.out.print(s);
             System.out.flush();
@@ -2531,7 +2464,7 @@ public class NativeImage {
 
     void showOutOfMemoryWarning() {
         String xmxFlag = "-Xmx";
-        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((first, second) -> second).orElse(null);
+        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((_, second) -> second).orElse(null);
         String maxHeapText = lastMaxHeapValue == null ? "" : " (The maximum heap size of the process was set with '" + lastMaxHeapValue + "'.)";
         String additionalAction = lastMaxHeapValue == null ? "" : " or increase the maximum heap size using the '" + xmxFlag + "' option";
         showMessage("The Native Image build process ran out of memory.%s%nPlease make sure your build system has more memory available%s.", maxHeapText, additionalAction);
